Updated meta tags for image

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,15 @@
   <meta name="description" content="Geethanjali Veetil's Portfolio Page" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/profileImage_favicon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta property="og:url" content="%PUBLIC_URL%" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Portfolio - Geethanjali Veetil" />
-  <meta property="og:description"
-    content="Personal and professional information about me and showcases my work in Web Development." />
-  <meta property="og:image" content="%PUBLIC_URL%/images/application_image.png" />
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Portfolio - Geethanjali Veetil">
+  <meta name="description" content="Geethanjali Veetil's Portfolio Page">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gveetil.github.io/">
+  <meta property="og:title" content="Portfolio - Geethanjali Veetil">
+  <meta property="og:description" content="Geethanjali Veetil's Portfolio Page">
+  <meta property="og:image" content="https://gveetil.github.io/images/application_image.png">
   <title>Geethanjali Veetil</title>
 </head>
 
