updated meta tags for linked in profile

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,16 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Primary Meta Tags -->
   <meta name="title" content="Portfolio - Geethanjali Veetil">
-  <meta name="description" content="Geethanjali Veetil's Portfolio Page">
+  <meta name="author" content="Geethanjali Veetil">
+  <meta name="description"
+    content="Geethanjali Veetil's Portfolio Page ... View my work in web development! Also has my profile and contact details. ">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://gveetil.github.io/">
   <meta property="og:title" content="Portfolio - Geethanjali Veetil">
-  <meta property="og:description" content="Geethanjali Veetil's Portfolio Page">
-  <meta property="og:image" content="https://gveetil.github.io/images/application_image.png">
+  <meta property="og:description"
+    content="Geethanjali Veetil's Portfolio Page ... View my work in web development! Also has my profile and contact details.">
+  <meta property="og:image" content="/images/meta_image.jpg">
   <title>Geethanjali Veetil</title>
 </head>
 
